--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "14.2.15",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "prisma": "^5.0.0",
     "@prisma/client": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "next": "^15.0.0",
     "next-auth": "^4.24.0",
-    "bcryptjs": "^2.4.3"
+    "prisma": "^5.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "^15.0.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "@types/bcryptjs": "^2.4.3",
-    "tsx": "^4.7.3"
+    "tsx": "^4.7.3",
+    "typescript": "^5"
   }
 }
